@@ -380,7 +380,7 @@ public class SymbolicValueAnalysisRefiner
         symbolicInfo.append(System.lineSeparator());
       }
       CFAEdgeWithAssumptions edgeWithAssumption =
-          new CFAEdgeWithAssumptions(p.getSecond().get(0), assumptions.build(), "");
+          new CFAEdgeWithAssumptions(p.getSecond().getFirst(), assumptions.build(), "");
       symbolicInfo.append(edgeWithAssumption.prettyPrintCode(1));
       currentState = nextState;
     }
