@@ -67,7 +67,7 @@ public abstract class CartesianRequirementsTranslator<T extends AbstractState>
     if (listOfIndependentRequirements.isEmpty()) {
       secReturn = "true";
     } else if (listOfIndependentRequirements.size() == 1) {
-      secReturn = listOfIndependentRequirements.get(0);
+      secReturn = listOfIndependentRequirements.getFirst();
     } else {
       secReturn = computeConjunction(listOfIndependentRequirements);
     }
