@@ -303,7 +303,7 @@ public abstract class PathTranslator {
       case 2 -> {
         // If there are more than one relevant child, then this is a condition.
         // We need to update the stack.
-        ARGState child1 = relevantChildrenOfElement.get(0);
+        ARGState child1 = relevantChildrenOfElement.getFirst();
         ARGState child2 = relevantChildrenOfElement.get(1);
         CAssumeEdge edge1 = (CAssumeEdge) currentElement.getEdgeToChild(child1);
         CAssumeEdge edge2 = (CAssumeEdge) currentElement.getEdgeToChild(child2);
